force-app/main/default/objects/Weekly_eNett_Service_Cloud_Snapshot__c/Weekly_eNett_Service_Cloud_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Weekly eNett Service Cloud Snapshot</label>
    <nameField>
        <displayFormat>ESC-{00000000}</displayFormat>
        <label>eNett Service Cloud Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Weekly eNett Service Cloud Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>