force-app/main/default/objects/Weekly_eNett_Service_Cloud_Snapshot__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <label>Account Name</label>
    <type>TextArea</type>
</CustomField>