force-app/main/default/objects/Weekly_eNett_Service_Cloud_Snapshot__c/fields/Account_Region__c.field-meta.xml
<CustomField>
    <fullName>Account_Region__c</fullName>
    <label>Account Region</label>
    <length>10</length>
    <type>Text</type>
</CustomField>