force-app/main/default/objects/Weekly_eNett_Service_Cloud_Snapshot__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <label>Assigned To</label>
    <length>50</length>
    <type>Text</type>
</CustomField>