force-app/main/default/objects/Weekly_eNett_Service_Cloud_Snapshot__c/fields/Case_Age_Business_Hours__c.field-meta.xml
<CustomField>
    <fullName>Case_Age_Business_Hours__c</fullName>
    <label>Case Age Business Hours</label>
    <precision>11</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>