force-app/main/default/objects/Weekly_eNett_Service_Cloud_Snapshot__c/fields/Jira_Priority__c.field-meta.xml
<CustomField>
    <fullName>Jira_Priority__c</fullName>
    <label>Jira Priority</label>
    <length>20</length>
    <type>Text</type>
</CustomField>