force-app/main/default/objects/Weekly_eNett_Service_Cloud_Snapshot__c/fields/On_Behalf_Of_Account__c.field-meta.xml
<CustomField>
    <fullName>On_Behalf_Of_Account__c</fullName>
    <label>On Behalf Of Account</label>
    <type>TextArea</type>
</CustomField>