force-app/main/default/objects/Weekly_eNett_Service_Cloud_Snapshot__c/fields/SR_Mode__c.field-meta.xml
<CustomField>
    <fullName>SR_Mode__c</fullName>
    <label>SR Mode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>