force-app/main/default/objects/Weekly_eNett_Service_Cloud_Snapshot__c/fields/Ticket_Created_by__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Created_by__c</fullName>
    <label>Ticket Created by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>