force-app/main/default/objects/Weekly_eNett_Service_Cloud_Snapshot__c/fields/Ticket_Service_Level__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Service_Level__c</fullName>
    <label>Ticket Service Level</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>