force-app/main/default/objects/Weekly_eNett_Service_Cloud_Snapshot__c/fields/Time_With_Customer__c.field-meta.xml
<CustomField>
    <fullName>Time_With_Customer__c</fullName>
    <label>Time With Customer</label>
    <precision>11</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>